# software_robot_library

./: CITATION.cff  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  TO DO.txt  checklist  directory_structure.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  open_task.yml
Control/: CMakeLists.txt  JointController.h  README.md  SerialCartesianController.h  SerialDynControl.h  SerialDynCtrl.h  SerialKinControl.h  SerialKinCtrl.h  rmrc.cpp
Control/doc/: .$ClassDiagrams.drawio.bkp  .$ControlClassDiagrams.drawio.bkp  .$ControlClassDiagrams.drawio.dtmp  .$SerialLinkBase.drawio.bkp  ClassDiagrams.drawio  ControlClassDiagrams.drawio  Parameters.drawio  SerialLinkBase.drawio  seriallinkbase.io
Control/include/: SerialControlBase.h  SerialDynControl.h  SerialDynamicControl.h  SerialKinControl.h  SerialKinematicControl.h  SerialLinkBase.h  SerialLinkKinematics.h
Control/include/Control/: DataStructures.h  DifferentialDriveBase.h  DifferentialDriveFeedback.h  DifferentialDrivePredictive.h  SerialDynamicControl.h  SerialKinematicControl.h  SerialLinkBase.h  SerialLinkDynamics.h  SerialLinkImpedance.h  SerialLinkKinematics.h  blah
Control/src/: DifferentialDriveBase.cpp  DifferentialDriveFeedback.cpp  DifferentialDrivePredictive.cpp  SerialControlBase.cpp  SerialDynControl.cpp  SerialDynamicControl.cpp  SerialKinControl.cpp  SerialKinematicControl.cpp  SerialLinkBase.cpp  SerialLinkDynamics.cpp  SerialLinkImpedance.cpp  SerialLinkKinematics.cpp
Control/test/: cartesian_velocity_control_test.cpp  dynamic_control_test.cpp  joint_position_error_plot.py  joint_state_plot.py  joint_torque_control_test.cpp  joint_velocity_control_test.cpp  kinematic_control_test.cpp  pose_error_plot.py  singularity_start_test.cpp
Math/: CMakeLists.txt  README.md
Math/doc/: .$ClassDiagrams.drawio.bkp  ClassDiagrams.drawio
Math/include/: Math.h  MathFunctions.h  Polynomial.h  Pose.h  QPSolver.h  SkewSymmetric.h  Spline.h
Math/include/Math/: DataStructures.h  Ellipsoid.h  Ellipsoid.tpp  Math.h  MathFunctions.h  Polynomial.h  QPSolver.h  SkewSymmetric.h  Spline.h
Math/src/: Ellipsoid.cpp  Math.cpp  MathFunctions.cpp  Polynomial.cpp  QPSolver.cpp  SkewSymmetric.cpp  Spline.cpp
Misc/: parody_mark1.urdf
Misc/KDLOutput/: sawyer.urdf  sawyer_configuration_0.txt  sawyer_configuration_2.txt  sawyer_configuration_4.txt  sawyer_configuration_5.txt
Model/: CMakeLists.txt  README.md
Model/doc/: .$ClassDiagrams.drawio.bkp  .$ClassDiagrams.drawio.dtmp  .$KinematicTreeClassDiagram.drawio.bkp  .$LinkClassDiagram.drawio.bkp  .$ModelClassDiagrams.drawio.bkp  ClassDiagrams.drawio  KinematicTreeClassDiagram.drawio  LinkClassDiagram.drawio  ModelClassDiagrams.drawio
Model/include/: Branch.h  Joint.h  KinematicTree.h  Link.h  Payload.h  Pose.h  RigidBody.h  SerialLink.h
Model/include/Model/: DataStructures.h  DifferentialDrive.h  Joint.h  KinematicTree.h  Link.h  Pose.h  Pose2D.h  RigidBody.h
Model/src/: Branch.cpp  DifferentialDrive.cpp  Joint.cpp  KinematicTree.cpp  Link.cpp  Pose.cpp  Pose2D.cpp  RigidBody.cpp  SerialLink.cpp  urdf_test.cpp
Model/test/: urdf_test.cpp
Model/test/kdl_output/: sawyer_configuration_1.txt  sawyer_configuration_3.txt
Model/test/urdf/: ur5.urdf
Robot/: Joint.h  Link.h  RigidBody.h  SerialLink.h  SerialLinkDyn.h  SerialLinkKin.h
Test/: CMakeLists.txt  Makefile  cmake_install.cmake  math_test.cpp  pose_test.cpp  qp_test.cpp  qr_test.cpp  robot_library_test.cpp  serial_link_test.cpp  urdf_test.cpp
Trajectory/: CMakeLists.txt  CartesianTrajectory.h  CubicRot.h  CubicRotation.h  CubicSpline.h  MultiPointTrajectory.h  Polynomial.h  Quintic.h  QuinticRot.h  QuinticRotation.h  README.md  TrapezoidalVelocity.h
Trajectory/doc/: .$ClassDiagrams.drawio.bkp  .$TrajectoryClassDiagrams.drawio.bkp  ClassDiagrams.drawio  TrajectoryClassDiagrams.drawio
Trajectory/include/: CartesianSpline.h  CartesianTrajectory.h  CubicSpline.h  MultiTrapezoid.h  Polynomial.h  Spline.h  SplineTrajectory.h  TrajectoryBase.h  TrapezoidalVelocity.h  Waypoints.h
Trajectory/include/Trajectory/: CartesianSpline.h  CartesianTrajectory.h  DataStructures.h  MinimumArcLength.h  MultiTrapezoid.h  MultiTrapezoidal.h  Polynomial.h  PolynomialTrajectory.h  Spline.h  SplineTrajectory.h  TrajectoryBase.h  TrapezoidalVelocity.h  Waypoints.h
Trajectory/src/: CartesianSpline.cpp  CartesianTrajectory.cpp  CubicSpline.cpp  MinimumArcLength.cpp  Polynomial.cpp  SplineTrajectory.cpp  TrajectoryBase.cpp  TrapezoidalVelocity.cpp
Trajectory/test/: data_plot.py  multi_trapezoid_test.cpp  polynomial_test.cpp  spline_test.cpp  trapezoidal_test.cpp  waypoint_data_plot.py
cmake/: RobotLibraryConfig.cmake.in
doc/: .$diagrams.drawio.bkp  diagrams.drawio
test_code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  robot_library_test  robot_library_test.cpp
